--- a/beer_rec_ramp_startingkit.ipynb
+++ b/beer_rec_ramp_startingkit.ipynb
@@ -105,12 +105,12 @@
    "metadata": {},
    "source": [
     "The dataset we provide has been crawled from the website https://www.ratebeer.com. This site is known as one of the first beer notation site. Users from all around the world comment and note precisely beers. The crawling was made thanks to GraphQL and Scrappy (Python's library). This crawling allowed us to get three datatypes, according the following feature structure :\n",
-    "* <u>**Information about user**</u> :\n",
+    "* __**Information about user**__ :\n",
     "    * **authorId**\n",
     "    * **users Surname** : We will not keep this feature since we want to try to pseudonimize users as much as possible.\n",
     "    * **authorReviewCOunt** : number of notation in the entire site. It doesn't reflect our database since we didn't crawl the whole website for legal reasons.\n",
     "<p>\n",
-    "* <u>**Information about beers**</u> : \n",
+    "* __**Information about beers**__ : \n",
     "    * **abv** : the alcohol degree of the beer.\n",
     "    * **averageRating** : the average note of the beer.\n",
     "    * **brewerId** : the Id of the Brewer. This could help to predict the quality of the beer, since brewers have their own expertise that influence the taste of beers\n",
