--- a/beer_rec_ramp_startingkit.ipynb
+++ b/beer_rec_ramp_startingkit.ipynb
@@ -520,6 +520,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from wordcloud import WordCloud\n",
+    "text =files[\"beerName\"]\n",
+    "\n",
+    "# Generate a word cloud image\n",
+    "wordcloud = WordCloud().generate(' '.join(files[\"beerName\"].values))\n",
+    "\n",
+    "# Display the generated image:\n",
+    "# the matplotlib way:\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.imshow(wordcloud, interpolation='bilinear')\n",
+    "plt.axis(\"off\")\n",
+    "\n",
+    "# lower max_font_size\n",
+    "wordcloud = WordCloud(max_font_size=40).generate(' '.join(files[\"beerName\"].values))\n",
+    "plt.figure()\n",
+    "plt.imshow(wordcloud, interpolation=\"bilinear\")\n",
+    "plt.axis(\"off\")\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
